--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=fintrack 
+spring.application.name=fintrack
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/fintrack
+spring.datasource.username=root
+spring.datasource.password=7261
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
